--- a/src/juegovida/Juego_Vida.form
+++ b/src/juegovida/Juego_Vida.form
@@ -177,6 +177,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="siguiente generaci&#xf3;n"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="siguienteGenActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botonAleatorio">
           <Properties>
